Ajustes softDelete Migration, correção Controllers
