# app/Http/Controllers/RegionalController.php
@@ -31,7 +31,44 @@ class RegionalController extends Controller
     */
     public function index()
     {
-        $regional = Regional::orderBy('nome')->paginate(10);
+        $regional = Regional::orderBy('nome')->orderBy('nome')->paginate(10);
         return response()->json($regional);
+    }
+
+    /**
+    *  @OA\GET(
+    *      path="/api/regional/{pesquisa}",
+    *      summary="Pesquisa uma Regional pelo nome",
+    *      description="Pesquisa por uma regional através do (pesquisa)",
+    *      tags={"Regionais"},
+    *      @OA\Parameter(
+    *          name="pesquisa",
+    *          in="path",
+    *          required=true,
+    *          description="Texto de pesquisa da regional",
+    *          @OA\Schema(type="string", example="regional")
+    *     ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="Regional Encontrada",
+    *          @OA\MediaType(
+    *              mediaType="application/json",
+    *          )
+    *      ),
+    *      @OA\Response(
+    *          response=404,
+    *          description="Musica não encontrada"
+    *      ),
+    *      security={{"bearerAuth":{}}}
+    *  )
+    */
+    public function pesquisa(string $pesquisa)
+    {
+        $regional = Regional::where('nome', 'ILIKE', "%$pesquisa%")->orderBy('nome')->get();
+        
+        if ($regional->isEmpty()) {            
+            return response()->json(['message' => 'Nenhuma regional encontrada com o nome pesquisado'], 404);
+        }
+        return response()->json(['message' => 'Regional encontrada','regional' => $regional]);
     }
 }
